--- a/packages/Webpack-react-app/src/home.html
+++ b/packages/Webpack-react-app/src/home.html
@@ -9,8 +9,9 @@
 
 <body>
     <div id="root"></div>
-    <a href="./index2.html">for page 2</a>
-    <script src="index.bundle.js"></script>
+    <a href="<%= ref %>">
+        <%= myTitle %>
+    </a>
 </body>
 
 </html>
